--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "cytoscape": "^3.2.7",
     "cytoscape-node-resize": "^3.0.0",
+    "cytoscape-spread": "^1.3.1",
     "jquery": "^3.2.1",
     "konva": "^1.7.6",
     "lodash": "^4.17.4",
