--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "homepage": "https://makalkin.github.io/mindblown/",
   "dependencies": {
     "cytoscape": "^3.2.7",
+    "cytoscape-dagre": "^2.1.0",
     "cytoscape-node-resize": "^3.0.0",
     "cytoscape-spread": "^1.3.1",
+    "dagre": "^0.7.4",
+    "file-saver": "^1.3.3",
     "jquery": "^3.2.1",
     "konva": "^1.7.6",
-    "lodash": "^4.17.4",
+    "lodash": "3.10.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-konva": "^1.6.2",
